# ros_essentials_cpp

./: CMakeLists.txt  README.md  package.xml
include/: readme
msg/: IoTSensor.msg
src/assignment/: turtlesim_motion_pose.py  turtlesim_pose.py
src/topic01_basics/action/: action_client.py  action_server.py
src/topic01_basics/iot_sensor/: iot_sensor_publisher.py  iot_sensor_subscriber.py
src/topic01_basics/service/: add_client.py  add_server.py  add_two_ints_client.cpp  add_two_ints_server.cpp
src/topic01_basics/talker_listener/: listener.cpp  talker.cpp
src/topic01_basics/talker_listener/scripts/: listener.py  listener_scanner.py  talker.py
src/topic02_motion/: robot_cleaner_st.py
src/topic02_motion/turtlebot/: turtlebot_move.py
src/topic02_motion/turtlebot2/free_space_navigation/: free_space_navigation.cpp  free_space_navigation.py
src/topic02_motion/turtlebot2/free_space_navigation/launch/: free_space_navigation_stage.launch  free_space_navigation_stage_python_node.launch
src/topic02_motion/turtlebot2/free_space_navigation/steps/: step01_motion_topics.py  step02_motion_topics.py  step03_motion_topics.py
src/topic02_motion/turtlebot3/: free_space_navigation_tb3.py
src/topic02_motion/turtlesim/: clean.launch  robot_cleaner.cpp  turtlesim_cleaner.py
src/topic03_perception/: Image Structure.ipynb  Image_Encoding.ipynb  ball_detection.py  ball_tracking.py  color_filtering.py  contours_detection.py  contours_processing.py  image_channels.py  image_draw.py  image_encoding.py  image_pub_sub.py  image_pub_sub_class.py  image_structure.py  image_thresholding.py  open_copy.py  read_video.py
src/topic03_perception/cpp/: image_pub_sub.cpp  open_copy.cpp  read_video.cpp
src/topic03_perception/cpp/launch/: image_pub_sub.launch
src/topic04_perception02_laser/: robot_stops_obstacle.py  scan_subscriber.cpp  scan_subscriber.py
src/topic04_perception02_laser/laserscan/: LaserScanner.cpp  LaserScanner.h  utility_lib.cpp  utility_lib.h
src/topic04_perception02_laser/laserscan/.svn/: all-wcprops  entries
src/topic04_perception02_laser/laserscan/.svn/text-base/: LaserScan.cpp.svn-base  LaserScan.h.svn-base
src/topic04_perception02_laser/launch/: depth_image_to_laser.launch  tf_scan.launch
